<resources>
    <string name="app_name">Shree Sarasvati Sisumandeer</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_signin">Sign In</string>
    <string name="menu_add_student">Add Student</string>
    <string name="menu_take_fees">Take Fees</string>
    <string name="menu_title_communication">Communication</string>
    <string name="menu_share">Share</string>

    <string-array name="user">
        <item>Student</item>
        <item>School Admin</item>
        <item>Driver</item>

    </string-array>

</resources>
