<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_signin"
            android:icon="@drawable/ic_sign_in"
            android:title="@string/menu_signin" />

        <item
            android:id="@+id/nav_add_student"
            android:icon="@drawable/ic_add_circle_black_24dp"
            android:title="@string/menu_add_student" />

        <item
            android:id="@+id/nav_take_fees"
            android:icon="@drawable/ic_take_fees"
            android:title="@string/menu_take_fees" />


    </group>
    <item android:title="@string/menu_title_communication">


        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_black_24dp"
                android:title="@string/menu_share" />


        </menu>
    </item>
</menu>
